# msd_robot_arm

./: README.md
arm_motor_controller/: .clang-format  CMakeLists.txt  README.md  arm_motor_controller.xml  package.xml
arm_motor_controller/config/: arm_controller.yaml  arm_controllers.yaml  armtest.ros2_control.xacro  armtest.urdf.xacro  initial_positions.yaml
arm_motor_controller/description/urdf/: armtest.urdf.xacro
arm_motor_controller/include/arm_motor_controller/: ArmSystem.hpp  ICLStepper.hpp  Motor.hpp  Servo42D.hpp  Servo57C.hpp
arm_motor_controller/include/arm_motor_controller/Communication/: ModbusDevice.hpp  RS485.hpp
arm_motor_controller/launch/: arm_controller.launch.py
arm_motor_controller/src/: ArmSystem.cpp  ICLStepper.cpp  Motor.cpp  Servo42D.cpp  Servo57C.cpp
arm_motor_controller/src/Communication/: ModbusDevice.cpp  RS485.cpp
arm_moveit_config/: .setup_assistant  README.md  package.xml
arm_moveit_config/config/: arm_end_effector.ros2_control.xacro  arm_final.ros2_control.xacro  arm_final.srdf  arm_final.urdf.xacro  arm_three.ros2_control.xacro  arm_three.srdf  arm_three.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
arm_moveit_config_old/: CMakeLists.txt  package.xml
arm_moveit_config_old/config/: arm_end_effector.ros2_control.xacro  arm_end_effector.srdf  arm_end_effector.urdf.xacro  joint_limits.yaml  ros2_controllers.yaml
arm_moveit_config_old/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
arm_pkg/: package.xml  setup.cfg  setup.py
arm_pkg/config/: all_controllers.yaml
arm_pkg/launch/: .arm_visual.launch.py.swp  arm_motion_planning_hw.launch.py  arm_servoing_hw.launch.py  arm_visual.launch.py
arm_pkg/rviz/: HWControl.rviz  moveit.rviz  servoing.rviz
arm_pkg/urdf/: final_hw.ros2_control.xacro  final_hw.urdf.xacro
arm_servoing/: CMakeLists.txt  package.xml
arm_servoing/config/: arm_simulated_config.yaml
arm_servoing/launch/: servo.launch.py
arm_servoing/src/: joystick_servo.cpp
marge/: CMakeLists.txt  README.md  marge.xml  package.xml
marge/config/: armtest.ros2_control.xacro  armtest.urdf.xacro  initial_positions.yaml  marge_config.yaml
marge/include/marge/: marge.hpp
marge/launch/: marge_test.launch.py
marge/src/: marge.cpp
robot_arm_description/: CMakeLists.txt  README.md  package.xml
robot_arm_description/micro_arm/urdf/: micro_arm.material.xacro  micro_arm_description.urdf.xacro  micro_arm_macros.xacro
sauron/: CMakeLists.txt  README.md  package.xml  rviz2_plugin.xml
sauron/include/sauron/: .rviz2_panel.hpp.swp  rviz2_panel.hpp
sauron/launch/: start.launch.py
sauron/resource/: push_button.ui
sauron/rviz2/: config.rviz
sauron/src/: .rviz2_panel.cpp.swp  rviz2_panel.cpp
sw_arm_desc/: README.md  package.xml  setup.cfg  setup.py
sw_arm_desc/launch/: launch.py
sw_arm_desc/meshes/collision/: link_2.STL  link_5.STL
sw_arm_desc/meshes/visual/: link_1.STL  link_2.STL
sw_arm_desc/urdf/: arm_end_effector.urdf  arm_final.urdf  arm_final_sim.urdf  arm_three.urdf
sw_arm_desc_old/: README.md  package.xml  setup.cfg  setup.py
sw_arm_desc_old/launch/: launch.py
sw_arm_desc_old/meshes/collision/: link_0.STL  link_1.STL  link_5.STL
sw_arm_desc_old/urdf/: arm_end_effector.urdf  arm_three.urdf
test_urdf_tool/launch/: launch.py
test_urdf_tool/meshes/collision/: link_0.STL  link_6.STL
test_urdf_tool/urdf/: BEN_Final_fullarm.urdf
